Fix squished sketchpad

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ html,
 body {
   padding: 0;
   box-sizing: border-box;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
